--- a/blogs/package.json
+++ b/blogs/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "gray-matter": "^4.0.3",
+    "mongodb": "^5.4.0",
     "next": "13.3.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
